syntax = "proto3";
package sensor;

option go_package = "github.com/Yusufzhafir/worlder-team-assignment/common/protobuf";
message SensorReading {
  double value = 1;
  string sensor_type = 2;   // fixed per A instance, but included for completeness
  string id1 = 3;           // uppercase Aâ€“Z
  int32  id2 = 4;
  int64  timestamp_ms = 5;  // Unix ms
}

message StreamAck { string status = 1; }

service IngestService {
  rpc StreamReadings(stream SensorReading) returns (StreamAck);
  rpc Readings(SensorReading) returns (StreamAck);
}
